--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap");
 
 * {
     margin: 0;
@@ -99,6 +100,18 @@ h2 {
 .card-buttons svg {
     width: 45px;
     height: 45px;
+}
+
+.card-buttons a {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    margin: 0 10px;
+    transition: all 0.2s ease-in-out;
+}
+
+.card-buttons a:hover {
+    transform: scale(1.05);
 }
 
 .card-container {
@@ -204,4 +217,69 @@ h2 {
     cursor: pointer;
     font-size: 24px;
     margin-left: 25px;
+}
+
+.click-on-me {
+    color: #fff;
+    transform: rotate(-17.045deg);
+    margin-right: 25em;
+}
+
+.click-on-me p {
+    font-family: "Nanum Pen Script", cursive;
+    font-size: 23px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 55%; /* 11px */
+}
+
+.click-on-me svg {
+    margin-left: 30px;
+}
+
+.code-display {
+    margin: 0 auto;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2em;
+}
+
+.html,
+.js,
+.css {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.code-header {
+    text-align: center;
+    margin-top: 1em;
+}
+
+#generate-btn {
+    background-color: #0fff7f;
+    margin: 0 auto;
+    border: none;
+    border-radius: 40px;
+    outline: none;
+    font-size: 24px;
+    color: #26292b;
+    width: 20%;
+    margin: 0 auto;
+    transition: all 0.2s ease-in-out;
+    padding: 10px 0;
+}
+
+#generate-btn:hover {
+    transform: scale(1.01);
+    cursor: pointer;
+}
+
+.heading-code {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
