--- a/programmercards-nextjs/src/app/styles.css
+++ b/programmercards-nextjs/src/app/styles.css
@@ -294,3 +294,114 @@ h2 {
 .cardComponent {
     margin-top: 10px;
 }
+
+.login {
+    background-color: transparent;
+    border: none;
+    padding-bottom: 2px;
+    border-bottom: 2px solid #26292b;
+    font-size: 24px;
+    color: #0fff7f;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
+}
+
+.login:hover {
+    transform: scale(1.1);
+    border-bottom: 2px solid #0fff7f;
+}
+
+.profilePic {
+    border-radius: 7px;
+}
+
+.makePost {
+    background: none;
+    color: #0fff7f;
+    border: none;
+    font-size: 24px;
+    border-bottom: 2px solid #26292b;
+    transition: transform 0.2s ease-in-out;
+    width: 10%;
+    margin: 0 auto;
+    cursor: pointer;
+}
+
+.makePost:hover {
+    transform: scale(1.1);
+    border-bottom: 2px solid #0fff7f;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 10px 10px;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+footer p {
+    font-size: 14px;
+    font-weight: 300;
+    opacity: 0.3;
+    margin-bottom: 5px;
+}
+
+.footerhr {
+    margin: 0 auto;
+    width: 50%;
+    border: 1px solid #0fff7f;
+    opacity: 0.3;
+    margin-bottom: 13px;
+}
+
+.marketplaceSignedOut {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    height: 500px;
+    width: 600px;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid #0fff7f;
+    margin: 0 auto;
+    border-radius: 30px;
+    margin-top: 50px;
+    gap: 10px;
+}
+
+.marketplace-container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    border-radius: 30px;
+    margin-top: 50px;
+    gap: 10px;
+}
+
+.filters p {
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    text-align: left;
+    margin-left: 20px;
+}
+
+.filters form {
+    display: flex;
+    gap: 10px;
+}
+
+.filters label {
+    border-left: 1px solid #0fff7f;
+    padding: 0 10px;
+}
+
+.footermarket {
+    margin-top: 5px;
+}
